// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="box overflowAuto"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <table
    className="table"
  >
    <caption
      className="absolute box overflowHidden"
      style={
        Object {
          "clip": "rect(1px, 1px, 1px, 1px)",
          "height": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      test
    </caption>
    <div>
      rest of table
    </div>
  </table>
</div>
`;

exports[`renders correctly with border 1`] = `
<div
  className="borderColorLightGray box overflowAuto rounding1 sizeSm solid"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <table
    className="table"
  >
    <caption
      className="absolute box overflowHidden"
      style={
        Object {
          "clip": "rect(1px, 1px, 1px, 1px)",
          "height": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      test
    </caption>
    <div>
      rest of table
    </div>
  </table>
</div>
`;

exports[`renders correctly with maxHeight 1`] = `
<div
  className="box overflowAuto"
  style={
    Object {
      "maxHeight": 100,
    }
  }
>
  <table
    className="table"
  >
    <caption
      className="absolute box overflowHidden"
      style={
        Object {
          "clip": "rect(1px, 1px, 1px, 1px)",
          "height": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      test
    </caption>
    <div>
      rest of table
    </div>
  </table>
</div>
`;

exports[`renders correctly with stickyColumns 1`] = `
<div
  className="box overflowAuto"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <table
    className="table"
  >
    <caption
      className="absolute box overflowHidden"
      style={
        Object {
          "clip": "rect(1px, 1px, 1px, 1px)",
          "height": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      test
    </caption>
    <div>
      rest of table
    </div>
  </table>
</div>
`;
